# blue_max

./: .gitignore  CMakeLists.txt
src/: Box.c  Box.h  Building.c  Building.h  Plane.c  Plane.h  Player.c  Player.h  Projectile.c  Projectile.h  Sphere.h  Vector.c  Vector.h  airport.c  airport.h  config.h  defs.h  draw.c  draw.h  entities.h  font.c  font.h  generate.c  generate.h  geometry.h  init_SDL.c  init_SDL.h  input.c  input.h  main.c  render.c  render.h  river.c  river.h  scene.c  scene.h  sphere.c  sphere.h  textures.c  textures.h  (+8 more)
src/entities/: Building.c  Building.h  Plane.c  Plane.h  Player.c  Player.h  Projectile.c  Projectile.h  Tree.c  Tree.h
src/geometry/: Box.c  Box.h  Sphere.c  Vector.c  Vector.h
